<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingHorizontal="20.dp"
    tools:context=".presentation.basket.BasketFragment">

    <LinearLayout
        android:id="@+id/ll_no_order"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image_no_order" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30.dp"
            android:text="@string/empty"
            android:textColor="#282828"
            android:textSize="20.dp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.dp"
            android:text="@string/your_basket_is_empty"
            android:textAlignment="center"
            android:textColor="#9294A8"
            android:textSize="20.dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_go_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.dp"
            android:text="@string/start_page"
            android:textColor="@color/black"
            app:backgroundTint="#FFD92B"
            app:cornerRadius="10.dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_has_order"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/basket"
                android:textColor="#000000"
                android:textSize="20.dp" />

            <ImageView
                android:id="@+id/basket_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/shopsRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="5"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            tools:listitem="@layout/item_shops_basket"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBasket"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16.dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/basket_item" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16.dp"
            app:cardBackgroundColor="#F3F3F3"
            app:cardCornerRadius="12.dp"
            app:strokeWidth="0.dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:paddingVertical="10.dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/all"
                    android:textColor="#000000"
                    android:textSize="14.dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/overallPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="22.dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/soum"
                    android:textColor="#000000"
                    android:textSize="22.dp" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirmation"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="16.dp"
            android:text="@string/select_address"
            android:textColor="@color/black"
            android:fontFamily="@font/lato_regular"
            app:backgroundTint="#FFD92B"
            app:cornerRadius="10.dp" />

    </LinearLayout>

</LinearLayout>