<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".presentation.profile.AppInfoFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:buttonGravity="center_vertical"
        app:navigationIcon="@drawable/ic_back">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/lato_bold"
            android:text="@string/about_app"
            android:textColor="@color/black_text_color"
            android:textSize="24sp" />
    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        app:srcCompat="@drawable/app_logo" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/app_name"
        android:textColor="@color/black_text_color"
        android:textSize="24sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/term_of_use"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:drawablePadding="22dp"
        android:fontFamily="@font/alata_regular"
        android:paddingVertical="16dp"
        android:text="Foydalanish shartlari"
        android:textColor="@color/black_text_color"
        android:textSize="18sp"
        app:drawableRightCompat="@drawable/ic_next_right"
        app:drawableTint="@color/black_text_color" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="20dp"
        android:background="@color/black_text_color" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/creator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:drawablePadding="22dp"
        android:ellipsize="end"
        android:fontFamily="@font/alata_regular"
        android:maxLines="1"
        android:paddingVertical="16dp"
        android:text="@string/app_creatorss"
        android:textColor="@color/black_text_color"
        android:textSize="18sp"
        app:drawableRightCompat="@drawable/ic_next_right"
        app:drawableTint="@color/black_text_color" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:drawablePadding="4dp"
        android:ellipsize="end"
        android:fontFamily="@font/alata_regular"
        android:maxLines="1"
        android:text="2024 Tezol"
        android:textColor="@color/gray_color"
        android:textSize="15sp"
        app:drawableLeftCompat="@drawable/ic_copy_right" />
</LinearLayout>